# play2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
.claude/: handoff.md
docs/: baseline-scores.md  code-map.md  product-context.md  tech-debt.md
docs/adrs/: 0003-reusable-eval-harness.md
docs/code-reviews/: 2026-04-15-prompt-history-and-ui-smoke.md
docs/retrospectives/: sprint-1-retro.md  sprint-3-retro.md  sprint-4-retro.md
docs/roles/: README.md  ai-engineer.md  architect.md  backend.md  data-engineer.md  devops.md  frontend.md  ml-engineer.md  pm.md  product-designer.md  research-scientist.md  security.md  tech-writer.md  tester.md
docs/tracking/: 2026-04-14-oracle-eval-harness-implementation.md  2026-04-15-prompt-history-ui-smoke-review.md
docs/tracking/archive/sprint-1/: 2026-04-14-drone-tsp-openenv-discovery.md
server/: __init__.py  app.py
src/warehouse_routing/: __init__.py  curriculum.py  env.py  eval.py  grader.py  models.py  pathing.py  policies.py  reward.py  sim.py  solver.py  tasks.py
src/warehouse_routing/server/: __init__.py  app.py  ui.py
tests/: __init__.py  test_curriculum.py  test_env_adapter.py  test_grader.py  test_grader_validation.py  test_inference_policy.py  test_models.py  test_pathing.py  test_policies.py  test_reward.py  test_sim.py  test_smoke.py  test_solver.py  test_tasks.py
warehouse-routing-blog/: README.md  index.html
